2006-01-28  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/layoutContainer.java
	(testMinimumViewSize): New test.

2006-01-28  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/javax/crypto/sasl/TestOfClientFactory.java: New file.
	* gnu/testlet/javax/crypto/sasl/TestOfServerFactory.java: Likewise.
	* gnu/testlet/javax/crypto/sasl/srp/TestOfSRPAuthInfoProvider.java:
	  Likewise.
	* gnu/testlet/javax/crypto/sasl/srp/TestOfSRPPasswordFile.java: Likewise.
	* gnu/testlet/javax/crypto/sasl/srp/TestOfSRPPrimitives.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfARCFour.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfICMGenerator.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfPBKDF2.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfPRNGFactory.java: Likewise.
	* gnu/testlet/javax/crypto/pad/TestOfPadFactory.java: Likewise.
	* gnu/testlet/javax/crypto/pad/TestOfPKCS7.java: Likewise.
	* gnu/testlet/javax/crypto/pad/TestOfTBC.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfCBC.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfCFB.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfEAX.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfECB.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfModeFactory.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfOFB.java: Likewise.
	* gnu/testlet/javax/crypto/mac/TestOfHMac.java: Likewise.
	* gnu/testlet/javax/crypto/mac/TestOfHMacFactory.java: Likewise.
	* gnu/testlet/javax/crypto/mac/TestOfHMacMD5.java: Likewise.
	* gnu/testlet/javax/crypto/mac/TestOfHMacSha1.java: Likewise.
	* gnu/testlet/javax/crypto/mac/TestOfMacFactory.java: Likewise.
	* gnu/testlet/javax/crypto/mac/TestOfOMAC.java: Likewise.
	* gnu/testlet/javax/crypto/mac/TestOfTMMH16.java: Likewise.
	* gnu/testlet/javax/crypto/keyring/TestOfPrivateKeyring.java: Likewise.
	* gnu/testlet/javax/crypto/keyring/TestOfPublicKeyring.java: Likewise.