@@ -1,3 +1,11 @@
+2006-01-29  Raif S. Naffah  <raif@swiftdsl.com.au>
+
+	* gnu/testlet/javax/crypto/mac/TestOfHMacCloneability.java: New file.
+	* gnu/testlet/javax/crypto/jce/TestOfMac.java (testEquality): Skip OMAC
+	with null cipher.
+	Use two MDGenerators directly instantiated.
+	(testCloneability): Use a directly instantiaed MDGenerator.
+
 2006-01-28  Roman Kennke  <kennke@aicas.com>
 
 	* gnu/testlet/javax/swing/ViewportLayout/layoutContainer.java
